# cinematch

./: CineMatch_PRD_v1 (2).docx
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  realtime.py  redis_client.py  security.py
backend/app/api/: auth.py  profiles.py  recommendations.py  sessions.py  social.py
backend/app/core/: __init__.py  compatibility.py  matching.py  movie_dna.py  recommendations.py  weights.py
backend/app/integrations/: streaming.py
backend/app/models/: __init__.py  session.py  social.py  user.py
backend/app/schemas/: models.py
backend/app/services/: compatibility_service.py  profile_service.py  session_service.py
backend/app/static/: app.js  catalogue.js  index.html  styles.css
backend/tests/: conftest.py  test_api.py  test_compatibility.py  test_matching.py  test_movie_dna.py  test_recommendations.py
notebooks/: CineMatch_Colab.ipynb
